--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@dp/babel-plugin-beeui",
+  "name": "babel-plugin-beeui",
   "version": "0.0.2",
   "description": "babel plugin of import for bee-ui.",
   "main": "lib/index.js",
